# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2017-12-10 ede
  * final bugfix: "#463 Starting OJ with java9 throws several exceptions"
    OJ should be generally java 9 ready now
  * bugfix: KML extension couldn't find it's strings as OJ's I18N didn't use 
    the proper resource bundle

2017-12-03 mmichaud <m.michael.michaud@orange.fr>
  * Remove Manifest sealed instruction from VertexSymbols.jar and
    JumpChart.jar as it throws Exception with java 9

2017-12-02 Giuseppe Aruta
  * Updated ColorChooser plugin to version 1.0
    - added recent color submenu
    - adopted fugue icons to plugins

2017-11-30 mmichaud <m.michael.michaud@orange.fr>
  * Fix EZButtons : fix save/restore shortcuts

2017-11-28 Giuseppe Aruta
  * add Plugin to open OpenJUMP wiki pages on default internet browser.
    Online links available on help menu

2017-11-26 Giuseppe Aruta
  * add support to affine trasformatio to image layers
    to "Affine Trasformation (from parameters)" plugin
    Only BMP, GIF, JPG, JP2, PNG and TIF are supported

2017-11-26 mmichaud <m.michael.michaud@orange.fr>
  * add appendToClassPathForInstrumentation method to PlugInClassLoader
    so that it can be started from IDE using code instrumentation

2017-11-19 mmichaud <m.michael.michaud@orange.fr>
  * hack to solve #448 about creating new folders in JFCWithEnterAction

2017-11-18 ede
  * always print help output when a wrong parameter/option was given
  * added --help switch as users might expect it

2017-11-17 Matthias Scholz <ms@jammerhund.de>
  * added methods for handling multiple ApplicationExitHandler in the
    WorkbenchFrame. Set the old getApplicationExitHandler() and
    setApplicationExitHandler() methods deprecated.
  * ConnectionManager adjusted for the new ApplicationExitHandler stuff.
